# pailotv2

./: .env.example  .gitignore  README.md  config.json  config.py  main.py  pyproject.toml  skills-lock.json  todo.md
.agents/skills/find-skills/: SKILL.md
agent/: agent.py  prompts.py  session_manager.py  tool_registry.py  tools.py
gateway/: connection_manager.py  gateway.py  utils.py
mcps/: mcp_manager.py  playwright_client.py
models/: events.py  model_tools.py  response.py  session.py
surfaces/: surf_discord.py  ws_discord.py
